Use the calculated height for positioned tables, so as to always compute an accurate position. Add box-sizing: border-box to table's default style

BUG: 107521


svn path=/branches/KDE/3.5/kdelibs/; revision=514954